--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="whiteTransparent">#99FFFFFF</color>
+    <color name="darkGray">#FF8d8d8d</color>
+
 </resources>
