--- a/app/src/main/res/layout/fragment_edit.xml
+++ b/app/src/main/res/layout/fragment_edit.xml
@@ -7,6 +7,7 @@
     tools:context=".ui.EditFragment">
 
     <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/ena"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -33,7 +34,8 @@
             android:inputType="number"
             android:minHeight="50dp"
             android:paddingTop="5dp"
-            android:paddingBottom="5dp" />
+            android:paddingBottom="5dp"
+            android:enabled="false"/>
 
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/editTextHospitalName"
